# farich

./: .clang-format  .gitignore  MLADescription.cc  MLADescription.h  Makefile  Minuit2FCN.cc  Minuit2FCN.h  README.md  Spectrum.cc  Spectrum.h  farichres.cc  plot_layers.py  richres5.C  run.sh  run_b.C  run_layers.sh  run_layers_fast.sh  run_layers_nt.sh  run_layers_pol2.sh  sigmeantoymc.C  slarichres.C
sim/: CMakeLists.txt  GNUmakefile  aRichSim.cc  test.cc
sim/cal/: Makefile  ctaulayerringcal.C  ctaulayerringcal.cc  ctauplotcal.C  ctauringcal.C
sim/include/: ColorRep.hh  MLRadiatorDescription.hh  RichAerogelMaterial.hh  RichAnalysisManagerLH.hh  RichAnalysisManagerS.hh  RichAnalysisMessenger.hh  RichAnalysisModuleLH.C  RichAnalysisModuleS.C  RichCerenkov.hh  RichCerenkov.hhr  RichDetectorConstruction.hh  RichDetectorMessenger.hh  RichEventAction.hh  RichEventMessenger.hh  RichFieldMessenger.hh  RichFieldSetup.hh  RichGlobals.hh  RichHit.hh  RichHitInfo.hh  RichHitInfo.hh.old  RichLinkDef.hh  RichPMT.hh  RichParameters.hh  RichParticlePropagation.hh  RichPhysicsList.hh  RichPrimaryData.hh  RichPrimaryGeneratorAction.hh  RichPrimaryGeneratorMessenger.hh  RichRootEvent.hh  RichRunAction.hh  RichRunManager.hh  RichRunManager.hh_  RichSpectrum.hh  RichStackingAction.hh  RichStepCut.hh  RichSteppingAction.hh  RichTrackingAction.hh  RichTrajectory.hh  RichUserTrackInformation.hh  RichVAnalysisManager.hh  (+5 more)
sim/macro/: alice_n1.03_mla2.mac  alice_n1.03_mla3.mac  alice_n1.03_sla24.mac  alice_n1.05_mla2.mac  alice_n1.05_mla2_real1.mac  alice_n1.05_mla3.mac  alice_n1.05_sla22.mac  alice_var.mac  babar_field.mac  ctau_bfield.mac  ctau_efield.mac  ctau_mppc2_px3_d200_mla4.mac  ctau_mppc2_px3_d200_watermla4.mac  ctau_nfield.mac  dsipm_261-35.mac  dsipm_261-35.mac.old  dsipm_261-35_mla11_pmma5mm.mac  dsipm_261-35_pmma5mm.mac  dsipm_261-35_pmma5mm.mac.old  dsipm_261-35_pmma5mm_px0.mac  dsipm_261-35_xrayscan.mac  dsipm_261-35_xrayscan.mac.old  dsipm_sla37_pmma5mm.mac  farich_var.mac  fasr_det.mac  gradient_h8500_mla20.mac  gradient_h8500_mla40.mac  lhcbmodel.mac  mat_vart.mac  n1.04_sla40_h8500.mac  naf10bs.mac  naf10qz.mac  naf20.mac  naf2x.mac  naf30bs.mac  naf_alice_var.mac  naf_vart.mac  panda_burle_mla3.mac  panda_h8500_mla2.mac  proto_n1.05_mla4_1_ideal.mac  (+58 more)
sim/src/: ColorRep.cc  MLRadiatorDescription.cc  RichAerogelMaterial.cc  RichAnalysisManagerLH.cc  RichAnalysisManagerS.cc  RichAnalysisMessenger.cc  RichCerenkov.cc  RichDetectorConstruction.cc  (+26 more)
(+36 files in other folders)
